fix(Filmstrip): Fix scrollbars around filmstrip (#9519)

--- a/css/filmstrip/_tile_view.scss
+++ b/css/filmstrip/_tile_view.scss
@@ -120,3 +120,7 @@
         }
     }
 }
+
+.indicator-icon-container {
+    display: inline-block;
+}
